<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Rei Matsushita
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
  ~ compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
  ~ the License for the specific language governing permissions and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_training"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/function_training"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_navigation_exam"
        android:enabled="true"
        android:icon="@drawable/ic_note_white_24dp"
        android:title="@string/function_exam"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_navigation_material"
        android:enabled="true"
        android:icon="@drawable/ic_library_books_white_24dp"
        android:title="@string/function_material"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_navigation_support"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/function_support"
        app:showAsAction="ifRoom" />
</menu>
