<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.training.TrainingResultFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="me.rei_m.hyakuninisshu.presentation.training.TrainingResultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tatami"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:background="@color/white99"
            android:gravity="start"
            android:padding="@dimen/padding_xs"
            android:text="@string/number_of_correct_answers" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:background="@color/white99"
            android:gravity="center"
            android:text="@{viewModel.score}"
            android:textSize="@dimen/text_xl" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:background="@color/white99"
            android:gravity="start"
            android:padding="@dimen/padding_xs"
            android:text="@string/average_response_time" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_l"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:background="@color/white99"
            android:gravity="center"
            android:textSize="@dimen/text_xl"
            app:averageAnswerSec="@{viewModel.averageAnswerSec}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_s"
            android:onClick="@{() -> viewModel.onClickPracticeWrongKarutas()}"
            android:text="@string/practice_wrong_karutas"
            android:visibility="@{viewModel.canRestartTraining ? View.VISIBLE : View.GONE}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="@{() -> viewModel.onClickBackMenu()}"
            android:text="@string/back_menu" />

    </LinearLayout>

</layout>
