<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.materialedit.ConfirmMaterialEditDialogFragment">

    <data>

        <import type="android.view.View" />

        <variable name="firstPhraseKanji" type="String" />
        <variable name="firstPhraseKana" type="String" />
        <variable name="secondPhraseKanji" type="String" />
        <variable name="secondPhraseKana" type="String" />
        <variable name="thirdPhraseKanji" type="String" />
        <variable name="thirdPhraseKana" type="String" />
        <variable name="fourthPhraseKanji" type="String" />
        <variable name="fourthPhraseKana" type="String" />
        <variable name="fifthPhraseKanji" type="String" />
        <variable name="fifthPhraseKana" type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/text_confirm_edit"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@string/text_caution_edit"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/first_phrase"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{firstPhraseKanji}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{firstPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/second_phrase"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{secondPhraseKanji}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{secondPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/third_phrase"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{thirdPhraseKanji}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{thirdPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/fourth_phrase"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{fourthPhraseKanji}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{fourthPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/fifth_phrase"
                android:textSize="@dimen/text_xs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{fifthPhraseKanji}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_m"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:text="@{fifthPhraseKana}" />

        </LinearLayout>

    </ScrollView>

</layout>
