<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/view_karuta_image"
        android:layout_width="@dimen/width_karuta_thumbnail"
        android:layout_height="@dimen/height_karuta_thumbnail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_m"
        android:contentDescription="@string/karuta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:text="@string/creator"
            android:textSize="@dimen/text_xs" />

        <TextView
            android:id="@+id/view_karuta_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:text="@string/original_text"
            android:textSize="@dimen/text_xs" />

        <TextView
            android:id="@+id/view_karuta_kami_no_ku_kanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />

        <TextView
            android:id="@+id/view_karuta_shimo_no_ku_kanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />

        <TextView
            android:id="@+id/view_karuta_kami_no_ku_kana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />

        <TextView
            android:id="@+id/view_karuta_shimo_no_ku_kana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m"
            android:text="@string/translation"
            android:textSize="@dimen/text_xs" />

        <TextView
            android:id="@+id/view_karuta_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_m"
            android:layout_marginStart="@dimen/margin_m" />
    </LinearLayout>

</merge>
