<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.core.QuizFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="me.rei_m.hyakuninisshu.presentation.materialedit.MaterialEditViewModel" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/text_explain_edit"
                android:textSize="@dimen/text_xs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_m"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    android:text="@string/creator"
                    android:textSize="@dimen/text_xs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:layout_marginStart="@dimen/margin_m"
                    app:creator="@{viewModel.creator}"
                    app:karutaNo="@{viewModel.karutaNo}" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_l"
                android:text="@string/first_phrase"
                android:textSize="@dimen/text_xs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.firstPhraseKanji}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.firstPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/second_phrase"
                android:textSize="@dimen/text_xs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.secondPhraseKanji}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.secondPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/third_phrase"
                android:textSize="@dimen/text_xs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.thirdPhraseKanji}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.thirdPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/fourth_phrase"
                android:textSize="@dimen/text_xs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.fourthPhraseKanji}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.fourthPhraseKana}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/fifth_phrase"
                android:textSize="@dimen/text_xs" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.fifthPhraseKanji}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_m"
                android:layout_marginStart="@dimen/margin_m"
                android:inputType="textNoSuggestions"
                android:text="@={viewModel.fifthPhraseKana}" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_l"
                android:onClick="@{viewModel::onClickEdit}"
                android:paddingBottom="@dimen/padding_m"
                android:paddingEnd="@dimen/padding_m"
                android:paddingStart="@dimen/padding_m"
                android:paddingTop="@dimen/padding_m"
                android:text="@string/update"
                android:textSize="@dimen/text_m" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ad_banner" />

        </LinearLayout>

    </ScrollView>

</layout>
